--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 			<script type="text/javascript" src="app.js"></script>
 		</head>
 		<body>
-			<p>"quickfire challenge</p>
+			<p>Quickfire Challenge</p>
 		</body>
 	</html>
